--- a/functions/package.json
+++ b/functions/package.json
@@ -21,15 +21,21 @@
     "browserless": "^9.8.0",
     "chromium": "^3.0.3",
     "cors": "^2.8.5",
+    "fetch-meta-tags": "^1.0.12",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^4.1.1",
     "got": "^11.8.1",
     "html-get": "^2.9.27",
-    "metascraper": "^5.18.5",
-    "metascraper-description": "^5.18.5",
-    "metascraper-image": "^5.18.5",
-    "metascraper-title": "^5.18.5",
-    "metascraper-url": "^5.18.5",
+    "metascraper": "^5.33.3",
+    "metascraper-author": "^5.33.3",
+    "metascraper-clearbit": "^5.33.3",
+    "metascraper-date": "^5.33.3",
+    "metascraper-description": "^5.33.3",
+    "metascraper-image": "^5.33.3",
+    "metascraper-logo": "^5.33.3",
+    "metascraper-publisher": "^5.33.3",
+    "metascraper-title": "^5.33.3",
+    "metascraper-url": "^5.33.3",
     "node-fetch": "^2.6.7",
     "puppeteer": "^19.4.1",
     "sanctions": "github:amlcloud/sanctions",
